--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 }
 body{font-family:var(--font);background:var(--bg);margin:0;padding:20px;text-transform:uppercase;color:var(--text)}
 header{text-align:center;font-size:2rem;margin-bottom:10px}
-/* Floating Menu Styles */
 .menu-container {position:fixed; top:12px; right:12px; z-index:1000; display:flex; flex-direction:column; align-items:flex-end; gap:8px}
 .menu-items {display:none; flex-direction:column; gap:8px; background:rgba(0,0,0,0.8); padding:10px; border-radius:8px}
 .menu-items.show {display:flex}
@@ -18,21 +17,26 @@ button{padding:8px 16px; border:0; border-radius:8px; font-weight:600; cursor:po
 button.main-menu {background:#333; color:#fff; border:2px solid #fff}
 button.primary{background:var(--accent);color:#fff}
 button.off{background:#999;color:#fff}
-.block{margin:16px;padding:14px;background:var(--card);border-radius:14px;box-shadow:0 2px 8px rgba(0,0,0,.08);position:relative;transition:box-shadow 0.5s}
+.block{margin:16px;padding:14px;background:var(--card);border-radius:14px;box-shadow:0 2px 8px rgba(0,0,0,.08);position:relative;transition:all 0.3s}
 .block h2{font-size:1.3rem;margin-bottom:10px;text-align:center}
 table{width:100%;border-collapse:collapse}
 th,td{border:1px solid var(--border);padding:6px;text-align:left}
-th{text-align:center}
+th{text-align:center; background:#eee; color:#000}
 input{padding:4px;border-radius:6px;border:1px solid #ccc;width:100%;box-sizing:border-box;text-transform:none;font-family:inherit}
 input[disabled]{background:#eee;color:#777}
-.theme-dark{--bg:#1e1e1e;--text:#eee;--card:#2a2a2a}
-.theme-blue{--bg:#eef4ff;--text:#102040;--card:#fff}
+/* Efek Cyberpunk LED */
 .theme-cyberpunk{--bg:#0a0a0a;--card:#1a001a;--text:#ff00ff;--border:#00ffcc;--accent:#ffff00;--yellow:#ffff00;}
 .cyber-effect{animation:ledRotate 3s linear infinite}
-@keyframes ledRotate{0%{box-shadow:0 0 5px #ff00ff,0 0 10px #00ffcc,0 0 15px #ffff00}50%{box-shadow:0 0 10px #ff00ff,0 0 20px #00ffcc,0 0 30px #ffff00}100%{box-shadow:0 0 5px #ff00ff,0 0 10px #00ffcc,0 0 15px #ffff00}}
+@keyframes ledRotate{
+  0%{box-shadow:0 0 5px #ff00ff,0 0 10px #00ffcc}
+  50%{box-shadow:0 0 10px #ff00ff,0 0 20px #00ffcc,0 0 30px #ffff00}
+  100%{box-shadow:0 0 5px #ff00ff,0 0 10px #00ffcc}
+}
+.theme-dark{--bg:#1e1e1e;--text:#eee;--card:#2a2a2a;--border:#444}
+.theme-blue{--bg:#eef4ff;--text:#102040;--card:#fff}
 .grand-total-table{width:100%;border-collapse:collapse;margin-top:10px}
 .grand-total-table th, .grand-total-table td{border:1px solid var(--border);padding:6px;text-align:center;font-weight:700}
-.grand-total-table td.saldo-akhir{background:var(--yellow);color:#000;text-align:center;font-weight:700}
+.grand-total-table td.saldo-akhir{background:var(--yellow);color:#000}
 </style>
 </head>
 <body>
@@ -54,25 +58,27 @@ input[disabled]{background:#eee;color:#777}
     </div>
 </div>
 
-<div class="block" id="pemasukan">
+<div class="block" id="boxMasuk">
 <h2>PEMASUKAN</h2>
 <table>
-<tr><th style="width:40px">Tanggal</th><th style="width:25%">Nama</th><th style="width:60%">Keterangan</th><th style="width:15%">Uang Masuk</th><th style="width:15%">Saldo</th></tr>
+<tr><th style="width:40px">Tgl</th><th style="width:25%">Nama</th><th style="width:60%">Keterangan</th><th style="width:15%">Masuk</th><th style="width:15%">Saldo</th></tr>
 <tbody id="tbMasuk"></tbody>
 </table>
 </div>
-<div class="block" id="pengeluaran">
+
+<div class="block" id="boxKeluar">
 <h2>PENGELUARAN</h2>
 <table>
-<tr><th style="width:30px">Tanggal</th><th style="width:40%">Keterangan</th><th style="width:8%">Qty</th><th style="width:25%">Harga</th><th style="width:25%">Total</th></tr>
+<tr><th style="width:30px">Tgl</th><th style="width:40%">Keterangan</th><th style="width:8%">Qty</th><th style="width:25%">Harga</th><th style="width:25%">Total</th></tr>
 <tbody id="tbKeluar"></tbody>
 </table>
 </div>
-<div class="block" id="grand">
+
+<div class="block" id="boxGrand">
 <h2>GRAND TOTAL</h2>
 <table class="grand-total-table">
-<tr><th>Total Uang Masuk</th><th>Total Uang Keluar</th><th>Total Saldo Akhir</th></tr>
-<tr><td id="totalMasuk"></td><td id="totalKeluar"></td><td id="saldoAkhir" class="saldo-akhir"></td></tr>
+<tr><th>Total Masuk</th><th>Total Keluar</th><th>Saldo Akhir</th></tr>
+<tr><td id="totalMasuk">0</td><td id="totalKeluar">0</td><td id="saldoAkhir" class="saldo-akhir">0</td></tr>
 </table>
 </div>
 
@@ -102,164 +108,142 @@ const namaBulan=['JANUARI','FEBRUARI','MARET','APRIL','MEI','JUNI','JULI','AGUST
 const namaAnggota=['SISA KAS SEBELUMNYA','RIZAL','ROMI','TRI','ANIS','FAJAR DJAKA','FAJAR SHANUM','AGUS','LUKMAN','IRAWAN','RIAN','MULYADIE','HELDI','HILMAN','NANO','TEGUH'];
 let currentTheme='';
 
-// Fungsi Toggle Menu
-function toggleMenu() {
-    const menu = document.getElementById('menuItems');
-    menu.classList.toggle('show');
-}
+function toggleMenu() { document.getElementById('menuItems').classList.toggle('show'); }
 
-function createRowMasuk(nama){
- const tr=document.createElement('tr');
- tr.innerHTML=`<td><input class='editable' type='date'></td>
-<td class='name'><input class='editable' value='${nama}'></td>
-<td class='ket'><input class='editable'></td>
-<td class='uang'><input class='editable'></td>
-<td class='saldo'>0</td>`;
- return tr;
-}
-function createRowKeluar(){
- const tr=document.createElement('tr');
- tr.innerHTML=`<td><input class='editable' type='date'></td>
-<td class='ket'><input class='editable' value=''></td>
-<td><input class='editable'></td>
-<td class='harga'><input class='editable'></td>
-<td class='total'>0</td>`;
- return tr;
-}
 function buildTables(){
  const tbMasuk=document.getElementById('tbMasuk');
  const tbKeluar=document.getElementById('tbKeluar');
- tbMasuk.innerHTML='';
- tbKeluar.innerHTML='';
- namaAnggota.forEach(n=>tbMasuk.appendChild(createRowMasuk(n)));
- for(let i=0;i<10;i++) tbKeluar.appendChild(createRowKeluar());
-}
-function lockUI(lock){document.querySelectorAll('.editable').forEach(i=>i.disabled=lock);}
-function applyAdminLock(){lockUI(!isAdmin);}
-
-function saveData(){
- if(!isAdmin) return;
- const key=bulan+'-'+tahun;
- const masuk=[...document.querySelectorAll('#tbMasuk tr')].map(tr=>({
-  tanggal:tr.children[0].firstChild.value,
-  nama:tr.children[1].firstChild.value,
-  ket:tr.children[2].firstChild.value,
-  uang:tr.children[3].firstChild.value
- }));
- const keluar=[...document.querySelectorAll('#tbKeluar tr')].map(tr=>({
-  tanggal:tr.children[0].firstChild.value,
-  ket:tr.children[1].firstChild.value||'',
-  qty:tr.children[2].firstChild.value,
-  harga:tr.children[3].firstChild.value
- }));
- db.ref('kas_data/' + key).set({masuk, keluar});
+ tbMasuk.innerHTML=''; tbKeluar.innerHTML='';
+ namaAnggota.forEach(n=>{
+  const tr=document.createElement('tr');
+  tr.innerHTML=`<td><input class='editable' type='date'></td><td><input class='editable' value='${n}'></td><td><input class='editable'></td><td><input class='editable' value='0'></td><td class='saldo'>0</td>`;
+  tbMasuk.appendChild(tr);
+ });
+ for(let i=0;i<10;i++){
+  const tr=document.createElement('tr');
+  tr.innerHTML=`<td><input class='editable' type='date'></td><td><input class='editable'></td><td><input class='editable' value='0'></td><td><input class='editable' value='0'></td><td class='total'>0</td>`;
+  tbKeluar.appendChild(tr);
+ }
 }
 
 function recalc(){
- let masuk=0;
+ let tM=0, tK=0, runM=0;
  document.querySelectorAll('#tbMasuk tr').forEach(tr=>{
-  let u=parseInt(tr.children[3].firstChild.value.replace(/\./g,''))||0;
-  masuk+=u;
+  let u=parseInt(tr.children[3].firstChild.value.replace(/\D/g,''))||0;
+  runM+=u; tM+=u;
   tr.children[3].firstChild.value=u.toLocaleString('id-ID');
-  tr.children[4].textContent=masuk.toLocaleString('id-ID');
+  tr.children[4].textContent=runM.toLocaleString('id-ID');
+  // Fitur Warna Merah Belum Bayar
   const ketVal=tr.children[2].firstChild.value.toUpperCase();
+  const inputs=tr.querySelectorAll('input');
   if(ketVal.includes('BELUM BAYAR')){
-   [1,2,3].forEach(i=>{const el=tr.children[i].firstChild; el.style.backgroundColor='var(--danger)'; el.style.color='#fff';});
-  } else {
-   [1,2,3].forEach(i=>{const el=tr.children[i].firstChild; el.style.backgroundColor=''; el.style.color='';});
+   inputs.forEach(inp=>{inp.style.backgroundColor='var(--danger)'; inp.style.color='#fff';});
+  }else{
+   inputs.forEach(inp=>{inp.style.backgroundColor=''; inp.style.color='';});
   }
  });
- let keluar=0;
  document.querySelectorAll('#tbKeluar tr').forEach(tr=>{
-  const qty=parseInt(tr.children[2].firstChild.value.replace(/\./g,''))||0;
-  let harga=parseInt(tr.children[3].firstChild.value.replace(/\./g,''))||0;
-  const t=qty*harga;
-  tr.children[3].firstChild.value = harga.toLocaleString('id-ID');
+  let q=parseInt(tr.children[2].firstChild.value.replace(/\D/g,''))||0;
+  let h=parseInt(tr.children[3].firstChild.value.replace(/\D/g,''))||0;
+  let t=q*h; tK+=t;
+  tr.children[2].firstChild.value=q.toLocaleString('id-ID');
+  tr.children[3].firstChild.value=h.toLocaleString('id-ID');
   tr.children[4].textContent=t.toLocaleString('id-ID');
-  keluar+=t;
  });
- const saldo=(masuk-keluar);
- document.getElementById('totalMasuk').textContent=masuk.toLocaleString('id-ID');
- document.getElementById('totalKeluar').textContent=keluar.toLocaleString('id-ID');
- document.getElementById('saldoAkhir').textContent=saldo.toLocaleString('id-ID');
+ document.getElementById('totalMasuk').textContent=tM.toLocaleString('id-ID');
+ document.getElementById('totalKeluar').textContent=tK.toLocaleString('id-ID');
+ document.getElementById('saldoAkhir').textContent=(tM-tK).toLocaleString('id-ID');
 }
 
-document.getElementById('adminBtn').onclick=()=>{
- if(!isAdmin){
-  const u=prompt('USERNAME');
-  const p=prompt('PASSWORD');
-  if(u!=='ADMIN'||p!=='SANUMION') return;
-  isAdmin=true; adminBtn.textContent='ADMIN ON'; adminBtn.className='primary';
-  startAutoSave();
- }else{
-  isAdmin=false; adminBtn.textContent='ADMIN OFF'; adminBtn.className='off';
-  stopAutoSave();
- }
- applyAdminLock();
- recalc();
- toggleMenu(); // Tutup menu setelah klik
-};
-
-function startAutoSave(){stopAutoSave(); autoSaveTimer=setInterval(()=>{saveData();},2500);}
-function stopAutoSave(){if(autoSaveTimer){clearInterval(autoSaveTimer);autoSaveTimer=null;}}
-
-document.getElementById('themeBtn').onclick=()=>{
- const themes=['theme-cyberpunk', 'theme-dark', 'theme-blue', ''];
- let idx=themes.indexOf(currentTheme)+1;
- if(idx>=themes.length) idx=0;
- if(currentTheme) document.body.classList.remove(currentTheme);
- currentTheme=themes[idx];
- if(currentTheme) document.body.classList.add(currentTheme);
- document.querySelectorAll('.block').forEach(b=>b.classList.toggle('cyber-effect',currentTheme==='theme-cyberpunk'));
- recalc();
-};
-
-document.addEventListener('input',()=>{recalc();});
-function prevMonth(){ bulan--; if(bulan<0){bulan=11;tahun--;} document.getElementById('periode').textContent=namaBulan[bulan]+' '+tahun; loadData();}
-function nextMonth(){ bulan++; if(bulan>11){bulan=0;tahun++;} document.getElementById('periode').textContent=namaBulan[bulan]+' '+tahun; loadData();}
-document.getElementById('cetakBtn').onclick=()=>{
-    toggleMenu(); 
-    window.scrollTo(0,0);
-    setTimeout(()=>{
-        html2canvas(document.body,{scale:2}).then(canvas=>{
-            const link=document.createElement('a');
-            link.download = `KAS_MAWAR3_${namaBulan[bulan]}_${tahun}.jpg`;
-            link.href = canvas.toDataURL('image/jpeg',0.95);
-            link.click();
-        });
-    }, 500);
+function fetchPrevSaldo(){
+ let pm=bulan-1, pt=tahun; if(pm<0){pm=11; pt--;}
+ db.ref('kas_data/'+pm+'-'+pt).once('value', s=>{
+  const d=s.val(); let sL=0;
+  if(d){
+   let m=0, k=0;
+   if(d.masuk) d.masuk.forEach(r=>m+=parseInt(r.uang.replace(/\D/g,''))||0);
+   if(d.keluar) d.keluar.forEach(r=>k+=(parseInt(r.qty.replace(/\D/g,''))||0)*(parseInt(r.harga.replace(/\D/g,''))||0));
+   sL=m-k;
+  }
+  const tr=document.querySelector('#tbMasuk tr');
+  if(tr){
+    const fM=(bulan+1).toString().padStart(2,'0');
+    tr.children[0].firstChild.value=`${tahun}-${fM}-01`;
+    tr.children[3].firstChild.value=sL.toLocaleString('id-ID');
+    recalc(); if(isAdmin) saveData();
+  }
+ });
 }
 
 function loadData(){
  buildTables();
- const key=bulan+'-'+tahun;
- db.ref('kas_data/' + key).once('value').then((snapshot) => {
-  const data = snapshot.val();
-  if(data){
-   if(data.masuk) data.masuk.forEach((r,i)=>{
+ db.ref('kas_data/'+bulan+'-'+tahun).once('value', s=>{
+  const d=s.val();
+  if(d && (d.masuk || d.keluar)){
+   if(d.masuk) d.masuk.forEach((r,i)=>{
     const tr=document.querySelectorAll('#tbMasuk tr')[i];
-    if(tr){
-     tr.children[0].firstChild.value=r.tanggal;
-     tr.children[1].firstChild.value=r.nama;
-     tr.children[2].firstChild.value=r.ket;
-     tr.children[3].firstChild.value=r.uang;
-    }
+    if(tr){ tr.children[0].firstChild.value=r.tanggal; tr.children[1].firstChild.value=r.nama; tr.children[2].firstChild.value=r.ket; tr.children[3].firstChild.value=r.uang; }
    });
-   if(data.keluar) data.keluar.forEach((r,i)=>{
+   if(d.keluar) d.keluar.forEach((r,i)=>{
     const tr=document.querySelectorAll('#tbKeluar tr')[i];
-    if(tr){
-     tr.children[0].firstChild.value=r.tanggal;
-     tr.children[1].firstChild.value=r.ket||'';
-     tr.children[2].firstChild.value=r.qty;
-     tr.children[3].firstChild.value=r.harga;
-    }
+    if(tr){ tr.children[0].firstChild.value=r.tanggal; tr.children[1].firstChild.value=r.ket; tr.children[2].firstChild.value=r.qty; tr.children[3].firstChild.value=r.harga; }
    });
+   recalc();
+  } else {
+   if(!(bulan===0 && tahun===2026)) fetchPrevSaldo();
+   recalc();
   }
-  recalc();
   applyAdminLock();
  });
 }
 
+function saveData(){
+ if(!isAdmin) return;
+ const m=[...document.querySelectorAll('#tbMasuk tr')].map(tr=>({tanggal:tr.children[0].firstChild.value, nama:tr.children[1].firstChild.value, ket:tr.children[2].firstChild.value, uang:tr.children[3].firstChild.value}));
+ const k=[...document.querySelectorAll('#tbKeluar tr')].map(tr=>({tanggal:tr.children[0].firstChild.value, ket:tr.children[1].firstChild.value, qty:tr.children[2].firstChild.value, harga:tr.children[3].firstChild.value}));
+ db.ref('kas_data/'+bulan+'-'+tahun).set({masuk:m, keluar:k});
+}
+
+document.getElementById('adminBtn').onclick=()=>{
+ if(!isAdmin){
+  const u=prompt('USER'), p=prompt('PASS');
+  if(u==='ADMIN'&&p==='SANUMION'){
+   isAdmin=true; adminBtn.textContent='ADMIN ON'; adminBtn.className='primary';
+   autoSaveTimer=setInterval(saveData, 2500);
+  }
+ }else{
+  isAdmin=false; adminBtn.textContent='ADMIN OFF'; adminBtn.className='off';
+  clearInterval(autoSaveTimer);
+ }
+ applyAdminLock(); toggleMenu(); recalc();
+};
+
+function lockUI(l){ document.querySelectorAll('.editable').forEach(i=>i.disabled=l); }
+function applyAdminLock(){ lockUI(!isAdmin); }
+function prevMonth(){ bulan--; if(bulan<0){bulan=11; tahun--;} updateUI(); }
+function nextMonth(){ bulan++; if(bulan>11){bulan=0; tahun++;} updateUI(); }
+function updateUI(){ document.getElementById('periode').textContent=namaBulan[bulan]+' '+tahun; loadData(); }
+
+document.getElementById('themeBtn').onclick=()=>{
+ const th=['theme-cyberpunk','theme-dark','theme-blue',''];
+ let i=th.indexOf(currentTheme)+1; if(i>=th.length) i=0;
+ if(currentTheme) document.body.classList.remove(currentTheme);
+ currentTheme=th[i]; if(currentTheme) document.body.classList.add(currentTheme);
+ // LED Effect Toggle
+ const blocks=document.querySelectorAll('.block');
+ blocks.forEach(b=>b.classList.toggle('cyber-effect', currentTheme==='theme-cyberpunk'));
+};
+
+document.getElementById('cetakBtn').onclick=()=>{
+ toggleMenu(); window.scrollTo(0,0);
+ setTimeout(()=>{
+  html2canvas(document.body,{scale:2}).then(c=>{
+   const l=document.createElement('a'); l.download=`KAS_${namaBulan[bulan]}.jpg`; l.href=c.toDataURL('image/jpeg',0.9); l.click();
+  });
+ },500);
+};
+
+document.addEventListener('input', recalc);
 loadData();
 </script>
 </body>
